set max-width instead of width to avoid overflow when scrollbar is visible

--- a/src/Components/LogList/LogList.scss
+++ b/src/Components/LogList/LogList.scss
@@ -3,7 +3,7 @@
 }
 
 #logList {
-    width: 480px;
+    max-width: 480px;
     padding: 10px;
     font-size: 12px;
     overflow: auto;
